# PhilLexRAG

./: .gitignore  pyproject.toml
notebooks/: checkpoint_done.txt  docling_ocr.ipynb  sc_elibrary_decisions_text.csv  scrape.ipynb  scraper_v2.ipynb
